--- a/src/css/common/Footer.module.css
+++ b/src/css/common/Footer.module.css
@@ -1,3 +1,19 @@
+.footer {
+    background-color: white;
+    width: 100%;
+    left:0;
+    top:0;
+    z-index:10;
+    border-top: 1px solid #999999;
+    padding: 10px 0 8px 0;
+
+}
+.siteTitle {
+    margin-left: 100px;
+    font-size: 30px;
+    font-weight: 600;
+    margin-right: 40px;
+}
 .navItems {
     list-style: none;
     margin: 0 auto;
@@ -12,10 +28,14 @@
     /* margin: 0 10px; */
     line-height: 60px;
 }
-
 .navItem>a {
     font-size: px;
     font-weight: 500;
     text-decoration: none;
     color: black;
+}
+.navItems>div:last-child {
+    margin-left: 290px;
+    font-size: 18px;
+    margin-bottom: 30px;
 }
