--- a/src/css/mbty/Mbty.module.css
+++ b/src/css/mbty/Mbty.module.css
@@ -1,10 +1,12 @@
 .container {
-    display: inline-flex;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin-top: 90px;
 }
 
 .sectionPageHeader {
     width: 600px;
-    margin: 0 auto;
 }
 
 .pageHeader {
@@ -112,7 +114,6 @@
 .sectionSide {
     display: inline-block;
     margin-left: 100px;
-    margin-top: 100px;
 }
 
 .sectionSide > div {
