--- a/src/css/admin/AdminNotice.module.css
+++ b/src/css/admin/AdminNotice.module.css
@@ -9,6 +9,8 @@
     display: flex;
     justify-content: flex-start;
 
+    padding-top: 80px;
+
     /* border: 1px solid blue; */
 
     
@@ -69,15 +71,24 @@
 }
 
 .adminNav {
-    width: 250px;
+    width: 230px;
     height: 500px;
     background-color: #F3F3F3;
-    padding-bottom: 150px;
-    padding-top: 40px;
+    padding: 60px 10px 40px 0;
     margin-right: 100px;
+}
+.adminNav>div {
+    width: 100%;
+}
+.adminNav>div>* {
+    /* border: 1px solid salmon; */
+    padding: 5px 0 5px 0;
 }
 .navLink {
     color: #767676 !important;
+    display: flex;
+    justify-content: flex-end;
+    
 }
 .navActive {
     color: black !important;
@@ -179,13 +190,28 @@
     width: 100%;
     height: 50px;
     border-radius: 8px;
-    margin-bottom: 30px;
+    margin-bottom: 16px;
     border: 0.5px solid gray;
 }
 .formContent {
     width: 100%;
     margin-bottom: 30px;
+    border-radius: 8px;
 }
 .formBtns {
     float: right;
+}
+.formBtns>input {
+    font-size: 17px;
+    padding: 4px 28px 4px 28px;
+    border-radius: 4px;
+    background: black;
+    border: 1px solid black;
+    color: white;
+}
+.formBtns>input:first-child {
+    margin-right: 12px;
+    background: white;
+    border: 1px solid #B8B8B8;
+    color: black;
 }
