--- a/src/css/mbtmi/MBTmi.module.css
+++ b/src/css/mbtmi/MBTmi.module.css
@@ -388,3 +388,41 @@
 .loginUsersComment {
     background-color: #F8F8F8;
 }
+
+/* MBTmi 작성폼 */
+.mbtmiForm {
+    /* border: 1px solid green; */
+    width: 100%;
+}
+.mbtmiForm>li {
+    list-style-type: none;
+}
+.formtitle {
+    width: 100%;
+    height: 50px;
+    border-radius: 8px;
+    margin-bottom: 30px;
+    border: 0.5px solid gray;
+}
+.formContent {
+    width: 100%;
+    margin-bottom: 16px;
+    border-radius: 8px;
+}
+.formBtns {
+    float: right;
+}
+.formBtns>input {
+    font-size: 17px;
+    padding: 4px 28px 4px 28px;
+    border-radius: 4px;
+    background: black;
+    border: 1px solid black;
+    color: white;
+}
+.formBtns>input:first-child {
+    margin-right: 12px;
+    background: white;
+    border: 1px solid #B8B8B8;
+    color: black;
+}
