--- a/src/css/user/Mypage.module.css
+++ b/src/css/user/Mypage.module.css
@@ -38,11 +38,11 @@
   margin-top: 90px;
     display: grid;
     width: 100%;
-    grid-template-columns: 350px auto;
+    grid-template-columns: 300px auto;
 }
 .sideBar{
   /* display: flex; */
-  width: 350px;
+  width: 300px;
   height: 100%;
   font-weight: 400;
   font-family: 'GangwonEdu_OTFBoldA';
@@ -67,4 +67,82 @@
 .myNick{
   font-size: 30px;
   text-align: center;
+}
+/* defaultPage */
+.title{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-size: 40px;
+
+}
+.sectionGr{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+}
+.section{
+  display: flex;
+  flex-direction: column;
+}
+.sectionTitle{
+  font-size: 20px;
+  text-align: center;
+}
+
+.sectionCnt{
+  display: flex;
+  width: 100px;
+  justify-content: center;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+  background-color: lightgrey;
+}
+
+/* MBT-Why Page */
+.myMbtwhyContainer{
+  font-family: 'GangwonEdu_OTFBoldA';
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.myMbtwhyTitle{
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  border-radius: 10px;
+  background-color: #dee2e6;
+  width: 800px;
+}
+/* .page-item.active, .page-link {
+  z-index: 3;
+  color: #fff;
+  background-color: #000000;
+  border-color: #000000;
+} */
+.pageNav{
+  background-color: #000000;
+  border-color: #dee2e6;
+}
+.page-link {
+  color: #000; 
+  background-color: #fff;
+  border: 1px solid #ccc; 
+}
+
+.pageItem.active .page-link {
+ z-index: 1;
+ color: #555;
+ font-weight:bold;
+ background-color: #f1f1f1;
+ border-color: #ccc;
+ 
+}
+
+.page-link:focus, .page-link:hover {
+  color: #000;
+  background-color: #fafafa; 
+  border-color: #ccc;
 }
