관리자 문의답변

--- a/src/css/common/Header.module.css
+++ b/src/css/common/Header.module.css
@@ -8,6 +8,9 @@
     border-bottom: 1px solid #999999;
 
 }
+.siteTitle {
+    margin-left: 100px;
+}
 .siteTitle,
 .siteTitle:link, 
 .siteTitle:visited, 
