--- a/src/css/admin/AdminNotice.module.css
+++ b/src/css/admin/AdminNotice.module.css
@@ -42,7 +42,7 @@
     margin-bottom: 50px;
     font-size: 40px;
     font-weight: 500;
-    border-bottom: 3px solid black;
+    border-bottom: 4px solid black;
     padding-bottom: 2px;
 }
 
@@ -50,9 +50,9 @@
 .adminPage {
     background-color: #F3F3F3;
     width: 100%;
-    height: 274px;
-    line-height: 274px;
-    padding-left: 270px;
+    height: 240px;
+    line-height: 240px;
+    padding-left: 300px;
     font-size: 25px;
     font-weight: 700;
     margin-top: 28px;
@@ -60,14 +60,12 @@
     position: relative;
     overflow: hidden; /* 오버레이 */
 }
-
 .adminPageImg {
     position: absolute;
-    top: -275px;
-    right: 0;
-
-    width: 900px;
-    object-fit: none; /* 이미지 자체의 크기 유지 */
+    top: -110px;
+    right: 100px !important;
+    width: 500px;
+    /* object-fit: none; 이미지 자체의 크기 유지 */
 }
 
 .adminNav {
@@ -98,17 +96,24 @@
 .table {
     width: 900px;
     margin-bottom: 40px;
+    border-bottom: black 1px solid;
+    border-top: black 1px solid;
 }
 .table>tbody>tr>td {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 15px 20px;
 }
-.table>tbody>tr:last-child {
-    border-bottom: #dee2e6 1px solid;
+.table>tbody>tr:not(:first-child) {
+    border-top: #d9d9d9 1px solid;
 }
+.openEye,
+.closedEye {
+    width: 22px;
+}
+
 .paging {
     display: flex;
     justify-content: center;
+    margin-top: 33px;
 }
 .paging>span {
     display: inline-block;
@@ -148,34 +153,57 @@
     margin-right: 15px;
 }
 .filterActive {
-    border-bottom: black solid 3px;
+    border-bottom: black solid 4px;
 }
 
 
 .searchBar {
     display: inline-block;
+    position: relative;
 }
 .searchBar>input {
+    border: 1px solid #767676;
     border-radius: 25px;
     height: 40px;
-    position: relative;
-    padding: 3px;
+    padding: 3px 42px 3px 13px;
+    width: 220px;
+    font-size: 18px;
 }
-
-.searchBtn {
+.searchBtnIcon {
     position: absolute;
-    top: 0;
-    right: 0;
-    width: 20px;
+    top: 8px;
+    right: 14px;
+    width: 23px;
+    z-index: 1;
+    cursor: pointer;
 }
 
 .checkboxAndButtons {
     width: 100%;
     display: flex; 
     justify-content: space-between;
-    padding-left: 20px;
+    padding-left: 19px;
     padding-right: 20px;
+    margin-bottom: 15px;
 }
+.checkboxAndButtons>span:first-child {
+    position: relative;
+    top: 8px;
+}
+.checkboxAndButtons>span>input[type=checkbox]+span {
+    font-size: 18px;
+}
+.checkboxAndButtons>span:nth-child(2)>input {
+    background-color: white;
+    border: 1px solid #d9d9d9;
+    padding: 4px 20px 4px 20px;
+    font-size: 18px;
+    border-radius: 4px;
+}
+.checkboxAndButtons>span:nth-child(2)>input:first-child {
+    margin-right: 15px;
+}
+
 
 
 /* 관리자페이지 공지사항 폼 */
