--- a/src/css/admin/AdminNotice.module.css
+++ b/src/css/admin/AdminNotice.module.css
@@ -11,7 +11,7 @@
 
     padding-top: 80px;
 
-    /* border: 1px solid blue; */
+    border: 1px solid blue;
 
     
     /* 너비와 높이에 padding과, border가 포함되도록 함 */
@@ -19,12 +19,13 @@
 }
 
 .section {
-    margin-left: -100px;
+    position:relative;
+    right: 100px;
     min-height: 900px; /* 컨텐츠가 매우 짧더라도 푸터가 바로 붙지 않도록 최소높이 지정 */
     width: 100%;
     font-size: 20px;
     
-    /* border: 1px solid red; */
+    border: 1px solid red;
     display: flex;
     justify-content: center;   
 }
@@ -55,7 +56,7 @@
     padding-left: 300px;
     font-size: 25px;
     font-weight: 700;
-    margin-top: 28px;
+    margin-top: 66px;
     
     position: relative;
     overflow: hidden; /* 오버레이 */
@@ -68,30 +69,6 @@
     /* object-fit: none; 이미지 자체의 크기 유지 */
 }
 
-.adminNav {
-    width: 230px;
-    height: 500px;
-    background-color: #F3F3F3;
-    padding: 60px 10px 40px 0;
-    margin-right: 100px;
-}
-.adminNav>div {
-    width: 100%;
-}
-.adminNav>div>* {
-    /* border: 1px solid salmon; */
-    padding: 5px 0 5px 0;
-}
-.navLink {
-    color: #767676 !important;
-    display: flex;
-    justify-content: flex-end;
-    
-}
-.navActive {
-    color: black !important;
-    font-weight: 700 !important;
-}
 
 .table {
     width: 900px;
