--- a/src/css/admin/AdminNav.module.css
+++ b/src/css/admin/AdminNav.module.css
@@ -4,6 +4,8 @@
     background-color: #F3F3F3;
     padding: 60px 10px 40px 0;
     margin-right: 100px;
+
+    float: right; /* sectionLeftArea 안에서 오른쪽정렬 */
 }
 .adminNav>div {
     width: 100%;
@@ -16,6 +18,7 @@
     color: #767676 !important;
     display: flex;
     justify-content: flex-end;
+    font-size: 20px;
     
 }
 .navActive {
