--- a/src/css/common/Header.module.css
+++ b/src/css/common/Header.module.css
@@ -2,12 +2,13 @@
     background-color: white;
     width: 100%;
     position: fixed;
+    /* position: sticky; */
     left:0;
     top:0;
     z-index:10;
     border-bottom: 1px solid #999999;
-
 }
+
 .siteTitle {
     margin-left: 100px;
 }
