--- a/src/css/mbtmi/MBTmi.module.css
+++ b/src/css/mbtmi/MBTmi.module.css
@@ -6,8 +6,17 @@
     padding-bottom: 60px; /* 푸터 높이만큼 확보해둠 */
     
     display: flex;
-    justify-content: center;
 }
+
+.sectionLeftArea,
+.sectionRightArea,
+.section {
+    flex: 1;
+}
+/* .sectionLeftArea,
+.sectionRightArea {
+    background: aliceblue;
+} */
 
 .section {
     border: 1px solid red;
@@ -294,7 +303,7 @@
     color: #8F8F8F;
 }
 .postContent {
-    /* background: lightblue; */
+    background: lightblue;
     font-size: 18px;
     width: 100%;
     min-height: 300px; /* 게시글 내용이 적더라도 최소 높이 유지 */
@@ -441,4 +450,21 @@
     background: white;
     border: 1px solid #B8B8B8;
     color: black;
+}
+
+
+/* 플로팅 버튼 */
+.sectionRightArea {
+    display: flex;
+    flex-direction: column-reverse;
+}
+.sectionRightArea>div {
+    /* border: dashed red 3px; */
+    padding-right: 100px;
+}
+.movetopIcon {
+    float: right;
+    width: 50px;
+    position: sticky;
+    cursor: pointer;
 }
