--- a/src/css/mbtwhy/Mbtwhy.module.css
+++ b/src/css/mbtwhy/Mbtwhy.module.css
@@ -5,7 +5,7 @@
     margin-top: 90px;
 }
 
-.sectionPageHeader {
+.sectionCenter {
     width: 600px;
 }
 
@@ -31,6 +31,7 @@
     width: 10%;
     margin: auto;
     cursor: pointer;
+    font-weight: bold;
 }
 
 .sortImg {
@@ -46,6 +47,7 @@
     padding: 25px;
     border-bottom: solid #C5C5C5 2px;
     font-weight: bold;
+    color: black;
 }
 
 .hotTag {
@@ -88,14 +90,14 @@
     padding-left: 35px;
 }
 
-.boardLower {
+.boardLow {
     display: flex;
     color: #C5C5C5;
     font-size: 20px;
     padding-left: 35px;
 }
 
-.boardLower > div > img {
+.boardLow > div > img {
     height: 30px;
     margin-right: 10px;
 }
