--- a/src/css/admin/AdminQna.module.css
+++ b/src/css/admin/AdminQna.module.css
@@ -22,6 +22,16 @@
 .table>tbody>tr>td:not(:nth-child(3)) {
     text-align: center;
 }
+.table>tbody>tr>td:nth-child(3) {
+    /* 줄바꿈을 막고 생략기호 표시 */
+    display: block;
+    width: 419.41px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0 auto;
+    /* background: ghostwhite; */
+}
 .table>tbody>tr>td:nth-child(4):hover {
     cursor: pointer;
     text-shadow: 0 0 1.5px rgba(0, 0, 0, 1);
