--- a/src/css/mbattle/MBattleForm.module.css
+++ b/src/css/mbattle/MBattleForm.module.css
@@ -22,7 +22,8 @@
     font-weight: bold;
 }
 
-.postTitleDiv {
+.ButtonDiv {
+    width: 775px;
     padding: 15px;
     text-align: right;
 }
@@ -41,8 +42,12 @@
 }
 
 .inputFileDiv {
+    display: flex;
     width: 300px;
     height: 300px;
     border: solid #C5C5C5 1px;
     margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
