--- a/src/css/admin/AdminQna.module.css
+++ b/src/css/admin/AdminQna.module.css
@@ -46,3 +46,70 @@
     text-align: center;
     font-weight: bolder;
 }
+
+
+/* 문의글 상세 + 답변 페이지 */
+.postArea {
+    width: 100%;
+    min-height: 300px; /*게시글이 짧더라도 최소 높이 확보*/
+    /* background: seashell;  */
+    padding: 25px;
+
+    margin-top: -25px;
+}
+.postTitle {
+    /* background:lightgoldenrodyellow; */
+    white-space: normal;
+    word-break: keep-all; /* 줄바꿈시 단어 단위 유지 */
+    margin-bottom: 25px;
+}
+.postTitle+span+span {
+    color: #8F8F8F;
+    margin-left: 30px;
+}
+.postContent {
+    /* background: lightblue; */
+    font-size: 18px;
+    width: 100%;
+    padding: 60px 0;
+    white-space: normal;
+    word-break: keep-all; /* 줄바꿈시 단어 단위 유지 */
+}
+
+
+/* 
+부모에 display: flex;
+자식1에 width 지정
+자식2에 flex: 1;
+===> 부모에서 자식1을 뺀 나머지 영역을 자식2가 모두 채움
+*/
+.answerArea {
+    width: 100%;
+    min-height: 300px;
+    /* border: 3px dashed green; */
+    display: flex;
+}
+.answerFormArea {
+    flex: 1;
+
+    /* 자식요소 정렬 정의 */
+    display: flex;
+    flex-direction: column;
+}
+.arrowIcon {
+    width : 45px;
+}
+.answerForm {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.answerFormArea>textarea {
+    padding: 15px;
+    font-size: 18px;
+    border: 1px solid #a5a5a5;
+    border-radius: 8px 8px 0 0;
+}
+/* .answerFormArea>textarea+* {
+    float: right;
+} */
