--- a/src/css/common/Header.module.css
+++ b/src/css/common/Header.module.css
@@ -61,7 +61,7 @@
 }
 
 .afterLogin {
-    background: seashell;
+    /* background: seashell; */
     width: 300px;
     height: 65px;
     margin-right: 120px;
@@ -70,6 +70,7 @@
 }
 .afterLogin>div {
     float: right;
+    /* background: lightcyan; */
 }
 
 .userMbti {
@@ -78,18 +79,83 @@
     border-radius: 5px;
     padding: 1px 6px;
     font-weight: 600;
+    font-size: 20px;
+    margin-left: 10px;
 }
 .userNickname {
     display: inline-block;
     margin-left: 8px;
     font-weight: 600;
+    font-size: 20px;
 }
-
-.bellIcon {
-    width: 30px;
+.bellIcon, .messageIcon {
     margin-right: 20px;
+    width: 23px;
+    margin-top: -7px;
+    cursor: pointer;
 }
 .messageIcon {
-    width: 35px;
-    
+    width: 30px;
+}
+.spannerIcon {
+    width: 21px;
+    margin-top: -7px;
+    margin-left: 10px;
+}
+
+.openPopover {
+    /* background: yellow; */
+    cursor: pointer;
+}
+.popover {
+    width: 100px;
+    text-align: center;
+}
+.popoverItem {
+    cursor: pointer;
+    min-width: 100px;
+    text-align: center;
+    font-weight: bolder;
+}
+
+.separator {
+    margin: 5px 0;
+    min-width: 180px;
+}
+.popoverBellOrMessageItem {
+    /* font-weight: bolder; */
+    text-align: left;
+    max-width: 204px;
+}
+.messageTitle {
+    /* background: ghostwhite; */
+    padding: 2px 0;
+
+    /* 줄바꿈을 막고 생략기호 표시 */
+    display: block;
+    max-width: 180px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0 auto;
+    cursor: pointer;
+}
+.popoverTopArea {
+    font-weight: bolder;
+    cursor: pointer;
+}
+.popoverBtnArea {
+    width: 100%;
+    /* background-color: aliceblue; */
+    display: flex;
+    justify-content: center;
+    margin-top: 7px;
+}
+.readAllBtn {
+    border: 1px solid #a9a9a9;
+    border-radius: 4px;
+    background: none;
+    color: #a9a9a9;
+    font-size: small;
+    cursor: pointer;
 }
