--- a/src/css/mbtwhy/MbtwhyDetail.module.css
+++ b/src/css/mbtwhy/MbtwhyDetail.module.css
@@ -53,7 +53,6 @@
 }
 
 .boardDate {
-    margin-bottom: 30px;
     color: #C5C5C5;
 }
 
@@ -104,7 +103,7 @@
 }
 
 .sectionComment {
-    padding: 15px 25px 15px 25px;
+    padding: 25px;
     border-bottom: solid #C5C5C5 2px;
 }
 
@@ -143,7 +142,7 @@
     text-align: right;
 }
 
-.replySection {
+.sectionReply {
     display: flex;
     justify-content: space-between;
 }
