--- a/src/css/common/Header.module.css
+++ b/src/css/common/Header.module.css
@@ -66,7 +66,7 @@
     height: 65px;
     margin-right: 120px;
     height: 100%;
-    margin-top: 20px;
+    margin-top: 17px;
 }
 .afterLogin>div {
     float: right;
@@ -79,23 +79,23 @@
     border-radius: 5px;
     padding: 1px 6px;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 18px;
     margin-left: 10px;
 }
 .userNickname {
     display: inline-block;
     margin-left: 8px;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 18px;
 }
 .bellIcon, .messageIcon {
     margin-right: 20px;
-    width: 23px;
-    margin-top: -7px;
+    width: 20px;
+    margin-top: -5px;
     cursor: pointer;
 }
 .messageIcon {
-    width: 30px;
+    width: 26px;
 }
 .spannerIcon {
     width: 21px;
@@ -123,24 +123,24 @@
     min-width: 180px;
 }
 .popoverBellOrMessageItem {
-    /* font-weight: bolder; */
+    background-color: lemonchiffon;
     text-align: left;
-    max-width: 204px;
+    max-width: 220px;
 }
 .messageTitle {
-    /* background: ghostwhite; */
+    background: ghostwhite;
     padding: 2px 0;
 
     /* 줄바꿈을 막고 생략기호 표시 */
     display: block;
-    max-width: 180px;
+    max-width: 200px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     margin: 0 auto;
     cursor: pointer;
 }
-.popoverTopArea {
+.popoverTopArea, .popoverTopArea:hover {
     font-weight: bolder;
     cursor: pointer;
 }
@@ -149,7 +149,12 @@
     /* background-color: aliceblue; */
     display: flex;
     justify-content: center;
-    margin-top: 7px;
+    margin-top: 8px;
+}
+.hasMoreMessages {
+    display: flex;
+    justify-content: center;
+    /* background-color: orange; */
 }
 .readAllBtn {
     border: 1px solid #a9a9a9;
@@ -159,3 +164,13 @@
     font-size: small;
     cursor: pointer;
 }
+.goToMessages, 
+.goToMessages:link, 
+.goToMessages:visited, 
+.goToMessages:hover, 
+.goToMessages:active {
+    text-decoration: none;
+    color: black;
+}
+
+
