메인, 플로팅버튼, 스크롤리셋

--- a/src/css/Main.module.css
+++ b/src/css/Main.module.css
@@ -1,6 +1,6 @@
 .container{
     padding-top: 62px; /* 배너를 헤더 바로 아래로 붙이기 위함 */
-    border: 3px solid blue;
+    /* border: 3px solid blue; */
 	height: auto;
     min-height: 100%;
     padding-bottom: 60px; /* 푸터 높이만큼 확보해둠 */
@@ -22,7 +22,7 @@
 } */
 
 .section {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     min-height: 900px; /* 컨텐츠가 매우 짧더라도 푸터가 바로 붙지 않도록 최소높이 지정 */
     width: 883px;
     font-size: 20px;
@@ -53,42 +53,59 @@
 }
 .sectionRightArea>div {
     /* border: dashed red 3px; */
-    padding-right: 100px;
+    /* padding-right: 100px; */
+    /* position: sticky; */
+    position:fixed;
+    right: 100px;
+    bottom: 40px;
 }
 .movetopIcon {
     float: right;
     width: 50px;
-    position: sticky;
     cursor: pointer;
 }
 
 /* 배너 */
 .bannerArea {
-    background: moccasin;
-    height: 200px;
+    border: 5px dashed orange;
+    box-sizing: border-box;
+    height: 300px;
     width: 100%;
     margin-bottom: 25px;
+    overflow: hidden;
+
+    /* position: relative; */
 }
+.bannerImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    /* 이미지 위치 */
+    /* position: absolute;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%); */
+}
+
+
 
 /* 게시판별 최신글 목록 */
 .newlyPosts {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 6px 30px;
     width: 883px;
-    height: 230px;
     font-size: 16px;
     /* background: honeydew; */
 }
 .table {
     width: 100%;
+    margin-bottom: 15px;
 }
 .table>tbody>tr:not(:first-child) {
     border-top: 1px solid #9B9B9B;
 }
 .table>tbody>tr>td {
-    padding: 5px;
+    padding: 6px;
 }
 .table>tbody>tr>td:nth-child(2)>small {
     color: #6e6e6e;
@@ -100,8 +117,16 @@
     border: 1px solid #F0A4AB;
     background: #F0A4AB;
     border-radius: 50%;
+
+    margin-right: 5px;
 }
 
+.table>tbody>tr>td>span:first-child {
+    margin-left: 5px;
+}
+.table>tbody>tr>td>small {
+    margin: 0 25px;
+}
 
 
 
