--- a/src/css/mbtmi/MBTmi.module.css
+++ b/src/css/mbtmi/MBTmi.module.css
@@ -69,12 +69,28 @@
 .weeklyPostsTable>tbody>tr>td {
     padding: 5px;
 }
+.overflow {
+    /* 줄바꿈을 막고 생략기호 표시 */
+    display: inline-block;
+    width: 436px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0 auto;
+    /* background: ghostwhite; */
+
+    height: 24px;
+    padding-top: 2.5px;
+}
 .weeklyPostsTable>tbody>tr>td:first-child,
 .weeklyPostsTable>tbody>tr>td:nth-child(4) {
     color: #A3A3A3
 }
 .weeklyPostsTable>tbody>tr>td:nth-child(2)>small {
     color: #6e6e6e;
+}
+.weeklyPostsTable>tbody>tr>td:nth-child(2)>span:nth-child(2) { /* 댓글수 */
+    font-size: 16px;
 }
 .profileColor {
     display: inline-block;
@@ -167,6 +183,11 @@
     margin-right: 5px;
     margin-top: -3px;
 }
+.popoverItem {
+    padding: 5px 20px;
+    cursor: pointer;
+    text-align: center;
+}
 .writebtnIcon {
     width: 16px;
     margin-right: 5px;
@@ -225,6 +246,18 @@
 }
 .td2row>span>small {
     color: #A3A3A3;
+}
+.overflowLong {
+    /* 줄바꿈을 막고 생략기호 표시 */
+    display: inline-block;
+    width: 700px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0 auto;
+    /* background: ghostwhite; */
+
+    margin-left: -3px;
 }
 .commentIcon {
     width: 23px;
