--- a/src/css/admin/AdminNotice.module.css
+++ b/src/css/admin/AdminNotice.module.css
@@ -3,8 +3,8 @@
 .table {
     width: 900px;
     margin-bottom: 40px;
-    border-bottom: black 1px solid;
-    border-top: black 1px solid;
+    border-top: 1px solid #444444;
+    border-collapse: collapse;
 }
 .table>tbody>tr>td {
     padding: 15px 20px;
