쪽지 알림 프로필 수정

--- a/src/css/user/Mypage.module.css
+++ b/src/css/user/Mypage.module.css
@@ -130,7 +130,8 @@
 .myMbtwhyContainer,
 .myMbtmiContainer,
 .myQnaContainer ,
-.bookmarkContainer
+.bookmarkContainer,
+.myNoteContainer
 {
   font-family: "GangwonEdu_OTFBoldA";
   display: flex;
@@ -142,7 +143,8 @@
 .myMbtwhyTitle,
 .myMbtmiTitle,
 .myQnaTitle ,
-.bookmarkTitle
+.bookmarkTitle,
+.myNoteTitle
 {
   display: flex;
   /* justify-content: center; */
