--- a/src/css/mbtmi/MBTmi.module.css
+++ b/src/css/mbtmi/MBTmi.module.css
@@ -1,6 +1,6 @@
 .container{
     padding-top: 80px;
-    border: 3px solid blue;
+    /* border: 3px solid blue; */
 	height: auto;
     min-height: 100%;
     padding-bottom: 60px; /* 푸터 높이만큼 확보해둠 */
@@ -19,7 +19,7 @@
 } */
 
 .section {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     min-height: 900px; /* 컨텐츠가 매우 짧더라도 푸터가 바로 붙지 않도록 최소높이 지정 */
     width: 883px;
     font-size: 20px;
