--- a/src/css/mbtwhy/MbtwhyDetail.module.css
+++ b/src/css/mbtwhy/MbtwhyDetail.module.css
@@ -36,13 +36,13 @@
     font-weight: bold;
 }
 
-.boardWriter {
+.writerDiv {
     display: flex;
     margin-bottom: 10px;
     justify-content: space-between;
 }
 
-.boardWriter > div {
+.writerDiv > div {
     display: flex;
 }
 
@@ -52,8 +52,10 @@
     border-radius: 50%;
 }
 
-.boardDate {
+.commentLowDiv {
+    display: flex;
     color: #C5C5C5;
+    justify-content: space-between;
 }
 
 .viewIcon {
@@ -104,7 +106,7 @@
 
 .sectionComment {
     padding: 25px;
-    border-bottom: solid #C5C5C5 2px;
+    border-bottom: solid #C5C5C5 1px;
 }
 
 .sectionComment > div{
@@ -142,9 +144,20 @@
     text-align: right;
 }
 
+.sectionPostReply {
+    display: flex;
+    justify-content: space-between;
+}
+
 .sectionReply {
     display: flex;
     justify-content: space-between;
+    padding: 25px;
+    border-bottom: solid #C5C5C5 2px;
+}
+
+.sectionReply > div {
+    font-weight: bold;
 }
 
 .replyArrowImg {
