--- a/src/css/admin/AdminNotice.module.css
+++ b/src/css/admin/AdminNotice.module.css
@@ -22,6 +22,12 @@
     margin: 0 auto;
     /* background: ghostwhite; */
 }
+
+.table>tbody>tr>td.errMsg {
+    text-align: center;
+    padding: 100px 0;
+}
+
 .openEye,
 .closedEye {
     width: 22px;
