--- a/src/css/admin/AdminNotice.module.css
+++ b/src/css/admin/AdminNotice.module.css
@@ -47,6 +47,7 @@
     border: 0px solid white;
     text-align: center;
     line-height: 32px;
+    cursor: pointer;
 }
 .activePage {
     border: 1px solid #A3A3A3 !important;
