mbtmi 주간인기글 목록

--- a/src/css/Main.module.css
+++ b/src/css/Main.module.css
@@ -88,6 +88,9 @@
     top: 50%; 
     left: 50%;
     transform: translate(-50%, -50%); */
+
+    min-width:  1300px;
+    min-height: 280px;
 }
 
 
