--- a/src/css/notice/Notice.module.css
+++ b/src/css/notice/Notice.module.css
@@ -79,6 +79,12 @@
     /* background: ghostwhite; */
 }
 
+.table>tbody>tr>td.errMsg {
+    text-align: center;
+    padding: 100px 0;
+    color: black;
+}
+
 .paging {
     display: flex;
     justify-content: center;
@@ -93,6 +99,7 @@
     line-height: 32px;
     border:0px solid white;
     text-align: center;
+    cursor: pointer;
 }
 .activePage {
     border: 1px solid #A3A3A3 !important;
@@ -159,6 +166,7 @@
 .viewIcon {
     max-width: 19px;
     margin-left: 20px;
+    margin-right: 7px;
 }
 .postArea>h6 {
     margin-top: 5px;
