--- a/src/css/user/Mypage.module.css
+++ b/src/css/user/Mypage.module.css
@@ -120,7 +120,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  /* margin-top: 40px; */
+  margin-left: 40px;
 }
 
 /* MBT-Why Page */
