--- a/src/css/mbtwhy/Mbtwhy.module.css
+++ b/src/css/mbtwhy/Mbtwhy.module.css
@@ -102,11 +102,6 @@
     margin-right: 10px;
 }
 
-.pagingLabel {
-    margin: 0 auto;
-    width: 600px;
-}
-
 .sectionSearch {
     width: 600px;
     text-align: center;
@@ -134,4 +129,27 @@
 .sectionSide > div:hover {
     transform: translateX(-20px);
     transition: all ease 0.3s 0s;
+}
+
+.paging {
+    display: flex;
+    justify-content: center;
+    margin-top: 33px;
+}
+
+.paging>span {
+    display: inline-block;
+    margin: 5px;
+    font-size: 18px;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    border:0px solid white;
+    text-align: center;
+    cursor: pointer;
+}
+
+.activePage {
+    border: 1px solid #A3A3A3 !important;
+    background: #f8f8f8;
 }
