--- a/src/css/notice/Notice.module.css
+++ b/src/css/notice/Notice.module.css
@@ -77,6 +77,8 @@
     text-overflow: ellipsis;
     margin: 0 auto;
     /* background: ghostwhite; */
+
+    cursor: pointer;
 }
 
 .table>tbody>tr>td.errMsg {
@@ -180,6 +182,19 @@
     padding: 60px 0  80px 0; /* top right bottom left */
     white-space: normal;
     word-break: keep-all; /* 줄바꿈시 단어 단위 유지 */
+}
+.postBtns {
+    /* background-color:lavender; */
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+}
+.postBtns>button {
+    color: #8F8F8F;
+    background: none;
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+    padding: 2px 8px 4px 8px;
 }
 
 /* 플로팅 버튼 */
