--- a/src/css/user/Mypage.module.css
+++ b/src/css/user/Mypage.module.css
@@ -170,9 +170,9 @@
 .paging {
   display: flex;
   justify-content: center;
-  margin-top: 35px;
+  margin-top: 33px;
 }
-.paging > span {
+.paging>span {
   display: inline-block;
   margin: 5px;
   font-size: 18px;
@@ -181,9 +181,10 @@
   border: 0px solid white;
   text-align: center;
   line-height: 32px;
+  cursor: pointer;
 }
 .activePage {
-  border: 1px solid #a3a3a3 !important;
+  border: 1px solid #A3A3A3 !important;
 }
 
 /* qnaModal */
