--- a/src/css/mbtwhy/Mbtwhy.module.css
+++ b/src/css/mbtwhy/Mbtwhy.module.css
@@ -3,6 +3,7 @@
     text-align: center;
     justify-content: center;
     margin-top: 90px;
+    margin-bottom: 90px;
 }
 
 .sectionCenter {
@@ -11,7 +12,7 @@
 
 .pageHeader {
     display: flex;
-    border-bottom: solid #4D6879 3px;
+    border-bottom: solid 3px;
 }
 
 /* .sortStyle {
@@ -35,15 +36,21 @@
     font-weight: bold;
 }
 
-.popoverItem {
-    cursor: pointer;
-    min-width: 60px;
-    text-align: center;
+.popoverButton {
+    background: none;
+    font-weight: bold;
+    border: 0;
 }
 
 .sortImg {
     height: 30px;
     margin-right: 10px;
+}
+
+.popoverItem {
+    cursor: pointer;
+    min-width: 60px;
+    text-align: center;
 }
 
 .sectionBoards {
@@ -113,6 +120,7 @@
     width: 600px;
     text-align: center;
     margin: 0 auto;
+    /* margin-bottom: 33px; */
 }
 
 .sectionSide {
@@ -142,6 +150,7 @@
     display: flex;
     justify-content: center;
     margin-top: 33px;
+    margin-bottom: 33px;
 }
 
 .paging>span {
