--- a/src/css/mbtwhy/MbtwhyDetail.module.css
+++ b/src/css/mbtwhy/MbtwhyDetail.module.css
@@ -1,5 +1,5 @@
 .container {
-    margin-top: 53px;
+    margin-top: 90px;
 }
 
 .sectionCenter {
@@ -9,25 +9,29 @@
 
 .pageHeader {
     display: flex;
-    border-bottom: solid #4D6879 3px;
+    border-bottom: solid 3px;
 }
-
-/* .dropDownStyle {
-    margin: 0 auto;
-    border: none;
-    box-shadow: none;
-    background-color: white;
-    color: black;
-} */
 
 .pageHeader > h1 {
     width: 70%;
     text-align: left;
 }
 
-.dropDownImg {
+.popoverButton {
+    background: none;
+    font-weight: bold;
+    border: 0;
+}
+
+.popoverImg {
     width: 30px;
     margin-right: 10px;
+}
+
+.popoverItem {
+    cursor: pointer;
+    min-width: 30px;
+    text-align: center;
 }
 
 .sectionBoard {
