--- a/src/css/mbtwhy/MbtwhyDetail.module.css
+++ b/src/css/mbtwhy/MbtwhyDetail.module.css
@@ -100,6 +100,7 @@
     display: flex;
     width: 80%;
     justify-content: center;
+    cursor: pointer;
 }
 
 .listDiv {
@@ -138,9 +139,23 @@
     line-height: 120px;
 }
 
-.pagingLabel {
-    margin: 0 auto;
-    width: 600px;
+.paging {
+    display: flex;
+    justify-content: center;
+    margin-top: 33px;
+    margin-bottom: 33px;
+}
+
+.paging>span {
+    display: inline-block;
+    margin: 5px;
+    font-size: 18px;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    border:0px solid white;
+    text-align: center;
+    cursor: pointer;
 }
 
 .postCommentDiv {
