--- a/src/css/user/Mypage.module.css
+++ b/src/css/user/Mypage.module.css
@@ -121,6 +121,8 @@
   justify-content: flex-start;
   align-items: center;
   margin-left: 40px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 /* MBT-Why Page */
