--- a/src/css/user/Mypage.module.css
+++ b/src/css/user/Mypage.module.css
@@ -133,7 +133,8 @@
 .myMbtmiContainer,
 .myQnaContainer ,
 .bookmarkContainer,
-.myNoteContainer
+.myNoteContainer,
+.myAlarmContainer
 {
   font-family: "GangwonEdu_OTFBoldA";
   display: flex;
@@ -141,12 +142,14 @@
   /* height: 787px; */
   flex-direction: column;
   align-items: center;
+  margin-left: 40px;
 }
 .myMbtwhyTitle,
 .myMbtmiTitle,
 .myQnaTitle ,
 .bookmarkTitle,
-.myNoteTitle
+.myNoteTitle,
+.myAlarmTitle
 {
   display: flex;
   /* justify-content: center; */
