--- a/src/css/mbtmi/MBTmi.module.css
+++ b/src/css/mbtmi/MBTmi.module.css
@@ -145,15 +145,19 @@
 .mbtiFilterBtns>span {
     font-size: 24px;
 }
-.categoryBtns>button {
+.categoryBtns>button, .categoryBtns>label{
     padding: 6px 10px 6px 10px;
     background: white;   
     border-radius: 5px;
     border: 1px solid #E6E6E6;
 }
-.categoryBtns>button:not(:first-child) {
+.categoryBtns>button:not(:first-child), .categoryBtns>label:not(:first-child) {
     padding: 3px 10px 3px 10px;
     margin-left: 15px;
+}
+.categoryBtns>label {
+    margin-top: 8px;
+    cursor: pointer;
 }
 .activeCategory {
     background: #E6E6E6 !important;
@@ -358,7 +362,7 @@
     padding: 5px 10px 4px 10px;
     width:auto;
     margin-left: 28px;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 .bookmarkIcon {
     width: 25px;
@@ -529,6 +533,10 @@
 .commentTd3row>small:first-child {
     margin-right: 17px;
 }
+/* 답글쓰기 버튼 */
+.commentTd3row>small:nth-child(2) {
+    cursor: pointer;
+}
 .commentReportOrDeleteBtn {
     float: right;
     cursor: pointer;
@@ -547,6 +555,47 @@
     color: #a7a7a7;
 }
 
+/* 댓글입력란 */
+.commentWriteArea {
+    border: 1px solid #C5C5C5;
+    margin-top: 30px;
+    font-size: 18px;
+}
+.commentWriteArea .profileColor+span {
+    font-weight: 500;
+}
+.commentWriteArea>div:first-child {
+    display: flex;
+    justify-content: space-between;
+    margin: 14px 16px 0 16px;
+}
+.commentWritebtn, .commentCancelbtn {
+    font-size: 16px;
+    font-weight: 600;
+    padding: 5px 8px;
+    background: none;
+    border-radius: 4px;
+    border: 1px solid #E6E6E6;
+    margin-left: 7px;
+}
+.commentWriteArea>div:last-child {
+    width: 100%;
+    padding: 10px 18px;
+    font-size: 16px;
+}
+.commentInput {
+    width: 100%;
+    padding: 10px;
+    min-height: 100px;
+    border-radius: 4px;
+    border: 1px solid #8F8F8F;
+}
+.replyWriteArea {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 95%;
+    float: right;
+}
 
 
 /* MBTmi 작성폼 */
@@ -563,11 +612,13 @@
     border-radius: 8px;
     margin-bottom: 30px;
     border: 0.5px solid gray;
+    padding: 0 15px;
 }
 .formContent {
     width: 100%;
     margin-bottom: 16px;
     border-radius: 8px;
+    padding: 15px;
 }
 .formBtns {
     float: right;
