댓글/대댓글 스타일 및 버튼 구분

--- a/src/css/mbtwhy/MbtwhyDetail.module.css
+++ b/src/css/mbtwhy/MbtwhyDetail.module.css
@@ -149,6 +149,10 @@
     line-height: 120px;
 }
 
+.noComment {
+    color: #C5C5C5;
+}
+
 .paging {
     display: flex;
     justify-content: center;
