--- a/src/css/mbtwhy/Mbtwhy.module.css
+++ b/src/css/mbtwhy/Mbtwhy.module.css
@@ -116,6 +116,12 @@
     margin-right: 10px;
 }
 
+.noMbtwhy {
+    margin: 100px;
+    width: 165px;
+    color:#C5C5C5;
+}
+
 .sectionSearch {
     width: 600px;
     text-align: center;
