--- a/src/css/admin/AdminNotice.module.css
+++ b/src/css/admin/AdminNotice.module.css
@@ -21,6 +21,7 @@
     text-overflow: ellipsis;
     margin: 0 auto;
     /* background: ghostwhite; */
+    cursor: pointer;
 }
 
 .table>tbody>tr>td.errMsg {
