--- a/src/css/admin/AdminNotice.module.css
+++ b/src/css/admin/AdminNotice.module.css
@@ -146,11 +146,14 @@
     border-radius: 8px;
     margin-bottom: 16px;
     border: 0.5px solid gray;
+    padding: 15px;
 }
 .formContent {
     width: 100%;
     margin-bottom: 30px;
     border-radius: 8px;
+    padding: 15px;
+    resize: none;
 }
 .formBtns {
     float: right;
