공지사항 수정 요청

--- a/src/css/admin/AdminFrame.module.css
+++ b/src/css/admin/AdminFrame.module.css
@@ -51,6 +51,8 @@
     font-weight: 500;
     border-bottom: 4px solid black;
     padding-bottom: 2px;
+
+    /* background-color: seashell; */
 }
 
 
