관리자페이지 공지사항 조회 변경

--- a/src/css/admin/AdminNotice.module.css
+++ b/src/css/admin/AdminNotice.module.css
@@ -137,8 +137,13 @@
     /* border: 1px solid green; */
     width: 900px;
 }
-.noticeForm>li {
+.noticeForm li {
     list-style-type: none;
+
+    display: inline;
+}
+.titleAndDate>span {
+    float: right;
 }
 .formtitle {
     width: 100%;
