--- a/src/css/mbattle/MBattleDetail.module.css
+++ b/src/css/mbattle/MBattleDetail.module.css
@@ -36,6 +36,24 @@
     font-weight: bold;
 }
 
+.popoverButton {
+    margin-left: 20px;
+    background: none;
+    font-weight: bold;
+    border: 0;
+}
+
+.popoverImg {
+    width: 30px;
+    margin-right: 10px;
+}
+
+.popoverItem {
+    cursor: pointer;
+    min-width: 30px;
+    text-align: center;
+}
+
 .boardTitle {
     display: flex;
     margin-bottom: 10px;
@@ -172,9 +190,27 @@
     line-height: 120px;
 }
 
-.pagingLabel {
-    margin: 0 auto;
-    width: 600px;
+.paging {
+    display: flex;
+    justify-content: center;
+    margin-top: 33px;
+    margin-bottom: 33px;
+}
+
+.paging>span {
+    display: inline-block;
+    margin: 5px;
+    font-size: 18px;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    border:0px solid white;
+    text-align: center;
+    cursor: pointer;
+}
+
+.activePage {
+    border: 1px solid #A3A3A3 !important;
 }
 
 .postCommentDiv {
