--- a/src/css/mbtwhy/Mbtwhy.module.css
+++ b/src/css/mbtwhy/Mbtwhy.module.css
@@ -13,6 +13,7 @@
 .pageHeader {
     display: flex;
     border-bottom: solid 3px;
+    justify-content: space-between;
 }
 
 /* .sortStyle {
@@ -27,12 +28,16 @@
     width: 70%;
     text-align: left;
     text-transform: uppercase;
+    cursor:default;
 }
 
-.pageHeader > h6 {
-    width: 10%;
-    margin: auto;
+.pageHeader > div {
+    display: flex;
     cursor: pointer;
+}
+
+.pageHeaderWriteBtn {
+    margin: auto 10px;
     font-weight: bold;
 }
 
@@ -169,6 +174,10 @@
     border:0px solid white;
     text-align: center;
     cursor: pointer;
+}
+
+.activePage {
+    border: 1px solid #A3A3A3 !important;
 }
 
 .activePage {
