--- a/src/css/mbtwhy/MbtwhyMain.module.css
+++ b/src/css/mbtwhy/MbtwhyMain.module.css
@@ -18,6 +18,7 @@
 .pageHeader > h1 {
     text-align: left;
     margin-bottom: 30px;
+    cursor: default;
 }
 
 .pageHeader > div {
@@ -28,6 +29,7 @@
     width: 90%;
     text-align: left;
     color: #C5C5C5;
+    cursor: default;
 }
 
 .pageHeaderWriteBtn {
