--- a/src/css/mbattle/MBattle.module.css
+++ b/src/css/mbattle/MBattle.module.css
@@ -40,19 +40,31 @@
     cursor: pointer;
 }
 
+.popoverButton {
+    background: none;
+    font-weight: bold;
+    border: 0;
+}
+
 .sortImg {
     height: 30px;
     margin-right: 10px;
 }
 
+.popoverItem {
+    cursor: pointer;
+    min-width: 60px;
+    text-align: center;
+}
+
 .sectionBoards {
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex;
+    flex-wrap: wrap; */
+    cursor: default;
 }
 
 .sectionBoard {
     width: 370px;
-    /* height: 200px; */
     margin: 15px;
     border: solid #C5C5C5 2px;
     font-weight: bold;
@@ -103,6 +115,11 @@
 .pagingLabel {
     margin: 0 auto;
     width: 600px;
+}
+
+.noMbattle {
+    margin: 100px;
+    color:#C5C5C5;
 }
 
 .sectionSearch {
