--- a/src/css/mbattle/MBattleDetail.module.css
+++ b/src/css/mbattle/MBattleDetail.module.css
@@ -1,5 +1,6 @@
 .container {
-    margin-top: 100px;
+    margin-top: 90px;
+    margin-bottom: 90px;
 }
 
 .sectionCenter {
@@ -98,6 +99,7 @@
 .subject {
     width: 300px;
     position: relative;
+    margin-bottom: 20px;
 }
 
 .subject > img {
@@ -106,6 +108,10 @@
     filter: brightness(0.4);
 }
 
+/* .subject > div {
+    height: 300px;
+} */
+
 .subject > h4 {
     text-align: center;
 	position: absolute;
@@ -113,6 +119,21 @@
 	left: 50%;
     transform: translate( -50%, -50% );
     color: lightgray;
+}
+
+.voteItemDiv {
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    height: 300px;
+}
+
+.voteItemDiv > h4 {
+    text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+    transform: translate( -50%, -50% );
 }
 
 .voteButtonDiv {
@@ -132,6 +153,7 @@
     display: flex;
     color: #C5C5C5;
     font-size: 20px;
+    justify-content: space-between;
 }
 
 .boardLow > div {
@@ -144,7 +166,6 @@
 
 .bookmarkDiv {
     display: flex;
-    width: 20%;
     justify-content: start;
 }
 
@@ -156,7 +177,6 @@
 
 .listDiv {
     display: flex;
-    width: 20%;
     justify-content: end;
 }
 
@@ -203,9 +223,9 @@
     font-size: 18px;
     width: 32px;
     height: 32px;
-    line-height: 32px;
-    border:0px solid white;
+    border: 0px solid white;
     text-align: center;
+    line-height: 32px;
     cursor: pointer;
 }
 
