--- a/src/css/mbtwhy/Mbtwhy.module.css
+++ b/src/css/mbtwhy/Mbtwhy.module.css
@@ -59,7 +59,7 @@
 }
 
 .sectionBoards {
-    cursor: pointer;
+    cursor: default;
 }
 
 .sectionBoard {
@@ -123,7 +123,6 @@
 
 .noMbtwhy {
     margin: 100px;
-    /* width: 165px; */
     color:#C5C5C5;
 }
 
